--- a/themes/jacman/_config.yml
+++ b/themes/jacman/_config.yml
@@ -72,7 +72,7 @@ toc:
 
 
 #### Comment
-duoshuo_shortname: ## e.g. wuchong   your duoshuo short name.
+duoshuo_shortname: Rudy-Zhang ## e.g. wuchong   your duoshuo short name.
 disqus_shortname:  ## e.g. wuchong   your disqus short name.
 
 #### Share button
